--- a/py1.ipynb
+++ b/py1.ipynb
@@ -6524,7 +6524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -6532,23 +6532,14 @@
      "output_type": "stream",
      "text": [
       "                   A         B         C         D\n",
-      "2024-01-01  0.700941  0.451062 -0.829718 -0.714021\n",
-      "2024-01-02 -0.151789  1.661328 -0.683523 -0.727505\n",
-      "2024-01-03  2.874145 -2.092667  0.774268  0.257162\n",
-      "2024-01-04  0.701805  0.598222 -0.236418  1.075911\n",
-      "2024-01-05  0.953392 -0.953208  0.240020  0.234627\n",
-      "2024-01-06 -2.631941 -0.378712 -0.485212  0.162711\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'list' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[100], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m df\u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m4\u001b[39m),index\u001b[38;5;241m=\u001b[39mdates, columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mABCD\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n\u001b[1;32m----> 5\u001b[0m dfRow \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mA\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mB\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m 2024-01-01 \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m :\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m 2024-01-02 \u001b[39m\u001b[38;5;124m\"\u001b[39m ]\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(dfRow)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Select rows 2 to 3 from all columns in the DataFrame created in question 6.\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Select all rows and columns 2 to 3 from the DataFrame created in question 6.\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'list' and 'str'"
+      "2024-01-01 -0.104646 -1.261687 -0.121221  0.072585\n",
+      "2024-01-02 -0.084764  2.300784  0.479793 -0.562291\n",
+      "2024-01-03 -0.336479  0.465131  0.008185  0.067225\n",
+      "2024-01-04  1.294109  0.293025 -0.382090 -1.780171\n",
+      "2024-01-05  0.602085 -1.105002 -0.788299 -0.287609\n",
+      "2024-01-06  0.521755 -0.539787  0.091795  0.008431\n",
+      "                   A         B         C\n",
+      "2024-01-01 -0.104646 -1.261687 -0.121221\n"
      ]
     }
    ],
@@ -6557,16 +6548,201 @@
     "\n",
     "df= pd.DataFrame(np.random.randn(6,4),index=dates, columns=list(\"ABCD\"))\n",
     "print(df)\n",
-    "dfRow = df.loc[[\"A\", \"B\" , \"C\" ] >\" 2024-01-01 \" :\" 2024-01-02 \" ]\n",
-    "print(dfRow)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Select rows 2 to 3 from all columns in the DataFrame created in question 6.\n",
-    "# Select all rows and columns 2 to 3 from the DataFrame created in question 6."
+    "dfRow = df.iloc[0:3 & 5 , 0:3 ]\n",
+    "print(dfRow)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   A         B         C         D\n",
+      "2024-01-01 -0.777687 -0.316090 -0.933301 -1.232409\n",
+      "2024-01-02 -0.325212  0.628035 -0.335604 -0.331573\n",
+      "2024-01-03 -0.673127  0.550585  0.218077 -0.462124\n",
+      "2024-01-04  1.495897 -0.518847 -1.359537 -1.146057\n",
+      "2024-01-05  2.103799  0.152253 -0.281740 -0.476099\n",
+      "2024-01-06  1.192118 -0.118021  0.502714 -0.181433\n",
+      "                   A         B         C         D\n",
+      "2024-01-02 -0.325212  0.628035 -0.335604 -0.331573\n",
+      "2024-01-03 -0.673127  0.550585  0.218077 -0.462124\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select rows 2 to 3 from all columns in the DataFrame created in question 6.\n",
+    "df= pd.DataFrame(np.random.randn(6,4),index=dates, columns=list(\"ABCD\"))\n",
+    "print(df)\n",
+    "dfRow = df.iloc[ 1:3 , : ]\n",
+    "print(dfRow)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   A         B         C         D\n",
+      "2024-01-01 -0.496978 -0.644791  0.814287  1.308344\n",
+      "2024-01-02  0.320793 -0.267771 -0.361744  0.098584\n",
+      "2024-01-03  0.890143  0.292524 -1.242283  0.426670\n",
+      "2024-01-04  1.814457 -0.206822  0.088891  0.818922\n",
+      "2024-01-05 -0.463185 -0.671495 -0.572734  0.848016\n",
+      "2024-01-06 -0.492807 -0.666189 -1.206464  0.239017\n",
+      "                   C         D\n",
+      "2024-01-01  0.814287  1.308344\n",
+      "2024-01-02 -0.361744  0.098584\n",
+      "2024-01-03 -1.242283  0.426670\n",
+      "2024-01-04  0.088891  0.818922\n",
+      "2024-01-05 -0.572734  0.848016\n",
+      "2024-01-06 -1.206464  0.239017\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select all rows and columns 2 to 3 from the DataFrame created in question 6.\n",
+    "\n",
+    "df= pd.DataFrame(np.random.randn(6,4),index=dates, columns=list(\"ABCD\"))\n",
+    "print(df)\n",
+    "dfcol = df.iloc[: , 2:4 ]\n",
+    "print(dfcol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5: Data Manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Names  Marks\n",
+      "0    khan     40\n",
+      "1     joe     31\n",
+      "2   saqib     25\n",
+      "3  zoahib     34\n",
+      "4    umar     48\n",
+      "5   nancy     85\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Copy and Modify DataFrame.\n",
+    "# Create a copy of the DataFrame created in question 6.\n",
+    "DataFr1= ['khan', 'joe', 'saqib', 'zoahib','umar', 'nancy']\n",
+    "DataFr2 = [40, 31, 25, 34, 48, 85]\n",
+    "\n",
+    "\n",
+    "DataFr= pd.DataFrame((zip(DataFr1,DataFr2)), columns=['Names', 'Marks'])\n",
+    "print(DataFr)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Names  Sales  Salary\n",
+      "0    khan     40   20000\n",
+      "1     joe     31   18000\n",
+      "2   saqib     25   15000\n",
+      "3  zoahib     34   19000\n",
+      "4    umar     48   25000\n",
+      "5   nancy     85   50000\n",
+      "=======================================\n",
+      "    Names  Sales  Salary  salessalary\n",
+      "0    khan     40   20000    -0.824384\n",
+      "1     joe     31   18000    -0.824384\n",
+      "2   saqib     25   15000    -0.824384\n",
+      "3  zoahib     34   19000    -0.824384\n",
+      "4    umar     48   25000    -0.824384\n",
+      "5   nancy     85   50000    -0.824384\n"
+     ]
+    }
+   ],
+   "source": [
+    "DiffData = {\n",
+    "            \n",
+    "            'Names': ['khan', 'joe', 'saqib', 'zoahib','umar', 'nancy'],\n",
+    "            'Sales': [40, 31, 25, 34, 48, 85],\n",
+    "            'Salary': [20000, 18000, 15000, 19000, 25000, 50000]}\n",
+    "\n",
+    "\n",
+    "df= pd.DataFrame(DiffData)\n",
+    "dfc['salessalary']=np.random.randn()\n",
+    "dfc['Sales']=dfc['Sales'].abs()\n",
+    "\n",
+    "print(df)\n",
+    "print('=======================================')\n",
+    "print(dfc)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 11\u001b[0m\n\u001b[0;32m      4\u001b[0m DiffData \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      5\u001b[0m             \n\u001b[0;32m      6\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNames\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkhan\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjoe\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msaqib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzoahib\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mumar\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnancy\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      7\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSales\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m40\u001b[39m, \u001b[38;5;241m31\u001b[39m, \u001b[38;5;241m25\u001b[39m, \u001b[38;5;241m34\u001b[39m, \u001b[38;5;241m48\u001b[39m, \u001b[38;5;241m85\u001b[39m],\n\u001b[0;32m      8\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSalary\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m20000\u001b[39m, \u001b[38;5;241m18000\u001b[39m, \u001b[38;5;241m15000\u001b[39m, \u001b[38;5;241m19000\u001b[39m, \u001b[38;5;241m25000\u001b[39m, \u001b[38;5;241m50000\u001b[39m]}\n\u001b[0;32m     10\u001b[0m address\u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkhan\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mISLD\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjoe\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKarachi\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msaqib\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRWP\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzoahib\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSGD\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mumar\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFSD\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnancy\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDGK\u001b[39m\u001b[38;5;124m'\u001b[39m}          \n\u001b[1;32m---> 11\u001b[0m df\u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39massign(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39maddress)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Add a new column E to the copied DataFrame with values [\"one\", \"one\", \"two\", \"three\", \"four\", \"three\"].\n",
+    "# Handle Missing Data.\n",
+    "\n",
+    "DiffData = {\n",
+    "            \n",
+    "            'Names': ['khan', 'joe', 'saqib', 'zoahib','umar', 'nancy'],\n",
+    "            'Sales': [40, 31, 25, 34, 48, 85],\n",
+    "            'Salary': [20000, 18000, 15000, 19000, 25000, 50000]}\n",
+    "\n",
+    "address= {'khan':'ISLD', 'joe':'Karachi', 'saqib':'RWP', 'zoahib':'SGD', 'umar':'FSD', 'nancy':'DGK'}          \n",
+    "df = df.assign(**address)\n",
+    "print(df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
